--- a/notebooks/4.01-ym-oct2024-report.rmd
+++ b/notebooks/4.01-ym-oct2024-report.rmd
@@ -48,11 +48,13 @@ library(htmltools)
 library(maps)
 library(tmap)
 library(jsonlite)
+library(sf)
+library(readxl)
 
 ```
 
 ```{r, echo=FALSE,include=FALSE}
-con <- dbConnect(RSQLite::SQLite(), file.path(config$SAMS_DB))
+con <- dbConnect(RSQLite::SQLite(), file.path("C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db"))
 
 # Query data for ITI module for years 2017 to 2023
 query <- "SELECT * FROM students WHERE module = 'ITI' AND year BETWEEN 2017 AND 2024;"
@@ -74,7 +76,7 @@ student_iti_admis = student_data_iti %>%
 ```
 
 ```{r, include=FALSE,echo=FALSE}
-con <- dbConnect(RSQLite::SQLite(), file.path(config$SAMS_DB))
+con <- dbConnect(RSQLite::SQLite(), file.path("C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db"))
 
 # Query data for ITI module for years 2017 to 2023
 query <- "SELECT * FROM students WHERE module = 'Diploma' AND year BETWEEN 2018 AND 2024;"
@@ -96,9 +98,124 @@ student_dip_admis = student_data_dip[!is.na(student_data_dip$sams_code),]
 
 ```
 
+## Vocational Temp
+```{r,eval=FALSE}
+ITI_tenth_graduates_2023 <- student_iti_admis %>%
+  filter(Qualifying_ExamName != "8th Pass") %>%
+  filter(YearofPassing == year) %>%
+  filter(year == 2023) %>%
+  summarise(Admitted_ITI_Students_Male = sum(gender == "Male"),
+            Admitted_ITI_Students_Female = sum(gender == "Female") )  # Count the number of students
+print(ITI_tenth_graduates_2023) 
+
+
+```
+
+
+## Vocational Pipeline
+```{r include=FALSE,eval=FALSE}
+
+# ITI extract two variables from the json_column
+student_iti_admis <- student_iti_admis %>%
+  mutate(parsed_json = lapply(mark_data, fromJSON)) %>%  # Parse the JSON
+  mutate(
+    Qualifying_ExamName = sapply(parsed_json, function(x) x$ExamName),   # Extract variable1
+    YearofPassing = sapply(parsed_json, function(x) x$YearofPassing)    # Extract variable2
+  ) %>%
+  select(-parsed_json)  # Remove the parsed_json column if not needed
+
+# Polytechnics extract two variables from the json_column
+# Done by Yashaswi. File name - 
+
+# Trades for Various Qualifications 2023
+iti_qual_trade_2023 = student_iti_admis %>%
+  filter(year == 2023) %>%
+  group_by(Qualifying_ExamName) %>%
+  summarise(number_of_trade = n_distinct(reported_branch_or_trade)) 
+
+iti_2023 = student_iti_admis %>%
+  filter(year == 2023) 
+
+table(iti_2023$highest_qualification)
+
+
+
+ITI_graduates_same_year <- student_iti_admis %>%
+  filter(Qualifying_ExamName != "8th Pass") %>%
+  filter(YearofPassing == year) %>%
+  group_by(year) %>%   # Group by admission year
+  summarise(Admitted_ITI_Students = n())  # Count the number of students
+ 
+
+# Import 10th figures
+tenth_count = read_excel("C:/Users/Admin/Box/Amitav/Skills/SAMS/data/external/tenth_plustwo_odisha.xlsx")
+
+# Summarize the data by year, calculating the total pass, total fail, and total batch count
+total_tenth_count <- tenth_count %>%
+  group_by(Year, Gender) %>%
+  summarise(
+    total_pass = sum(Pass, na.rm = TRUE),
+    total_fail = sum(Fail, na.rm = TRUE),
+    total_batch = total_pass + total_fail
+  ) %>%
+  ungroup() %>%
+  group_by(Year) %>%
+  summarise(
+    total_pass = sum(total_pass),
+    total_fail = sum(total_fail),
+    total_batch = total_pass + total_fail
+  )
+
+
+# Import admission count for +2 in from 2011 to 2023 from SAMS Dashboard
+plus_two_admis <- read_excel("C:/Users/Admin/Box/Amitav/Skills/SAMS/data/external/tenth_plustwo_odisha.xlsx", 
+    sheet = "plus_two")
+
+plus_two_admis <- plus_two_admis %>% rename(year = Year)
+total_tenth_count <- total_tenth_count %>% rename(year = Year)
+
+total_tenth_count <- total_tenth_count %>% rename(total_tenth_batch = total_batch)
+plus_two_admis <- plus_two_admis %>% rename(total_plus_two_admitted = student_admitted)
+
+# Select only the columns you need from each dataframe
+df1_selected <- plus_two_admis %>% select(year, total_plus_two_admitted)
+df2_selected <- total_tenth_count %>% select(year, total_tenth_batch)
+
+# Perform full_join based on 'Year'
+#pipeline_table <- df2_selected %>%
+#  full_join(df1_selected, by = "year") %>%
+#  full_join(ITI_graduates_same_year, by = "year") %>%
+#  full_join(_, by = "year") %>%
+#  arrange(year) %>%
+#  mutate(total_plus_two_admitted = gsub(",", "", total_plus_two_admitted)) %>%
+#  mutate(total_plus_two_admitted = as.numeric(total_plus_two_admitted)) 
+
+# pipeline_table$residual = pipeline_table$total_tenth_batch - pipeline_table$total_plus_two_admitted - pipeline_table$Admitted_ITI_Students - pipeline_table
+
+student_iti_admis$diff_year_yearpassing = student_iti_admis$year - as.numeric(student_iti_admis$YearofPassing)  
+
+ggplot(student_iti_admis, aes(x = diff_year_yearpassing)) +
+  geom_histogram(binwidth = 1, fill = "blue", color = "black") +
+  labs(title = "Histogram of Year Difference", x = "Difference Between Years", y = "Count") +
+  scale_x_continuous(limits = c(0, 30), 
+                     breaks = seq(0, 30, by = 1))
+```
+
+
+```{r tables, echo=FALSE,include=FALSE, results='asis'}
+#pipeline_table %>%
+#  filter(year >= 2017) %>%
+#  knitr::kable(caption = "Table __: Vocational Training Pipeline in Odisha", digits = 1) %>%
+#  kableExtra::kable_styling(bootstrap_options = "striped",full_width = FALSE)
+
+
+
+```
+
+
 ## Demographics
 
-```{r, echo=FALSE,include=FALSE}
+```{r include=FALSE}
 ## Social Group composition in across years
 
 # Function to calculate % for groups
@@ -172,16 +289,20 @@ pivot_table_dip_inc_soc_2023 <- student_dip_admis %>%
               values_fill = list(percentage = 0)) %>%
   select(social_category, `Upto 2.5 lakh`,`Between 2.5 To 8 lakh`, `Above 8 lakh`, `--`)
 
-
 ```
 
-```{r,include=FALSE}
+```{r echo=FALSE, results='asis'}
 ITI_soc_grp %>%
   knitr::kable(caption = "Table _: Social Category Composition ITIs (%)", digits = 1) %>%
   kableExtra::kable_styling(bootstrap_options = "striped",full_width = FALSE)
+
 poly_soc_grp %>% 
   knitr::kable(caption = "Table _: Social Category Composition Polytechnics (%)", digits = 1) %>%
-  kableExtra::kable_styling(bootstrap_options = "striped",full_width = FALSE)
+  kableExtra::kable_styling(bootstrap_options = "striped", 
+                            full_width = TRUE,       # Allows table to expand
+                            position = "center",     # Center the table
+                            font_size = 14) %>%      # Adjust font size
+  kableExtra::column_spec(1:ncol(ITI_soc_grp), width = "2cm") 
 
 ITI_religion %>%
   knitr::kable(caption = "Table _: Religion Composition ITI (%)", digits = 1) %>%
@@ -219,49 +340,6 @@ pivot_table_dip_inc_soc_2023 %>%
 
 ```
 
-## Marks
-```{r include=FALSE}
-
-# ITI extract two variables from the json_column
-student_iti_admis <- student_iti_admis %>%
-  mutate(parsed_json = lapply(mark_data, fromJSON)) %>%  # Parse the JSON
-  mutate(
-    Qualifying_ExamName = sapply(parsed_json, function(x) x$ExamName),   # Extract variable1
-    YearofPassing = sapply(parsed_json, function(x) x$YearofPassing)    # Extract variable2
-  ) %>%
-  select(-parsed_json)  # Remove the parsed_json column if not needed
-
-# Polytechnics extract two variables from the json_column
-student_dip_admis <- student_dip_admis %>%
-  mutate(parsed_json = lapply(mark_data, fromJSON)) %>%  # Parse the JSON
-  mutate(
-    Qualifying_ExamName = sapply(parsed_json, function(x) x$ExamName),   # Extract variable1
-    YearofPassing = sapply(parsed_json, function(x) x$YearofPassing)    # Extract variable2
-  ) %>%
-  select(-parsed_json)  # Remove the parsed_json column if not needed
-
-# Trades for Various Qualifications 2023
-iti_qual_trade_2023 = student_iti_admis %>%
-  filter(year == 2023) %>%
-  group_by(Qualifying_ExamName) %>%
-  summarise(number_of_trade = n_distinct(reported_branch_or_trade)) 
-
-
-ITI_graduates_same_year <- student_iti_admis %>%
-  filter(Qualifying_ExamName != "8th Pass") %>%
-  filter(YearofPassing == year) %>%
-  group_by(year) %>%   # Group by admission year
-  summarise(Admitted_ITI_Students = n())  # Count the number of students
-
-
-Poly_graduates_same_year <- student_iti_admis %>%
-  filter(Qualifying_ExamName != "8th Pass") %>%
-  filter(YearofPassing == year) %>%
-  group_by(year) %>%   # Group by admission year
-  summarise(Admitted_ITI_Students = n())  # Count the number of students
-
-
-```
 
 
 ## Geography
@@ -479,13 +557,13 @@ map_per_lakh + tm_view(view.legend.position = c("right", "bottom"))
 
 ## Student count in ITIs
 iti_student_count = student_iti_admis %>%
-  group_by(year,type_of_institute) %>%
+  group_by(year,typeof_institute) %>%
   summarise(student_count = n(), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 iti_student_count_pivoted <- iti_student_count %>%
   pivot_wider( 
-    names_from = type_of_institute, 
+    names_from = typeof_institute, 
     values_from = student_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -501,13 +579,13 @@ iti_student_count_summary <- iti_student_count_pivoted %>%
 
 ## Student count in Polytechnics
 dip_student_count = student_dip_admis %>%
-  group_by(year,type_of_institute) %>%
+  group_by(year,typeof_institute) %>%
   summarise(student_count = n(), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 dip_student_count_pivoted <- dip_student_count %>%
   pivot_wider( 
-    names_from = type_of_institute, 
+    names_from = typeof_institute, 
     values_from = student_count, 
     values_fill = NA  # Fill missing values with NA
   )
@@ -524,24 +602,24 @@ dip_student_count_summary <- dip_student_count_pivoted %>%
 
 # Student count in ITIs across districts
 #iti_student_dist_count = student_iti_admis %>%
-#  group_by(year,institute_district,type_of_institute,reported_institute) %>%
+#  group_by(year,institute_district,typeof_institute,reported_institute) %>%
 #  summarise(student_count = n(), .groups = "drop")
 #view(iti_student_count)
 # Student count in Polytechnics across districts
 #poly_student_dist_count = student_dip_admis %>%
-#  group_by(year,institute_district,type_of_institute,reported_institute) %>%
+#  group_by(year,institute_district,typeof_institute,reported_institute) %>%
 #  summarise(student_count = n(), .groups = "drop")
 
 
 # ITI Count
 iti_institutes_count = student_iti_admis %>%
-  group_by(year,type_of_institute) %>%
+  group_by(year,typeof_institute) %>%
   summarise(ITI_count = n_distinct(reported_institute), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 iti_institutes_count_pivoted <- iti_institutes_count %>%
   pivot_wider( 
-    names_from = type_of_institute, 
+    names_from = typeof_institute, 
     values_from = ITI_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -556,13 +634,13 @@ iti_institutes_count_pivoted_summary <- iti_institutes_count_pivoted %>%
 
 # Polytechnics Count
 poly_institutes_count = student_dip_admis %>%
-  group_by(year,type_of_institute) %>%
+  group_by(year,typeof_institute) %>%
   summarise(poly_count = n_distinct(reported_institute), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 poly_institutes_count_pivoted <- poly_institutes_count %>%
   pivot_wider( 
-    names_from = type_of_institute, 
+    names_from = typeof_institute, 
     values_from = poly_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -580,7 +658,7 @@ poly_institutes_count_pivoted_summary <- poly_institutes_count_pivoted %>%
 
 # Poly Count across districts
 #poly_institutes_count = student_dip_admis %>%
-#  group_by(year,institute_district,type_of_institute) %>%
+#  group_by(year,institute_district,typeof_institute) %>%
 #  summarise(Polytechnics_count = n_distinct(reported_institute), .groups = "drop")
 
 
@@ -590,18 +668,18 @@ poly_institutes_count_pivoted_summary <- poly_institutes_count_pivoted %>%
 # ITI
 iti_level_student_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,type_of_institute,reported_institute) %>%
+  group_by(institute_district,typeof_institute,reported_institute) %>%
   summarise(student_count = n(), .groups = "drop") %>%
-  select(reported_institute, student_count, type_of_institute, institute_district) %>%
+  select(reported_institute, student_count, typeof_institute, institute_district) %>%
     arrange(desc(student_count)) %>%
     slice_head(n = 10)
 
 # Polytechnics
 poly_level_student_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,type_of_institute,reported_institute) %>%
+  group_by(institute_district,typeof_institute,reported_institute) %>%
   summarise(student_count = n(), .groups = "drop") %>%
-  select(reported_institute, student_count, type_of_institute, institute_district) %>%
+  select(reported_institute, student_count, typeof_institute, institute_district) %>%
   arrange(desc(student_count)) %>%
   slice_head(n = 10)
 
@@ -610,18 +688,18 @@ poly_level_student_count = student_dip_admis %>%
 # ITI Level Female Student Count with Total Students and Total Gov ITIs
 iti_level_fem_student_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,type_of_institute,reported_institute) %>%
-  summarise(female_students = sum(gender == "Female"), .groups = "drop") %>%
-  select(reported_institute, female_students, type_of_institute, institute_district) %>%
-    arrange(desc(female_students)) %>%
-    slice_head(n = 10)
+  group_by(institute_district, typeof_institute, reported_institute) %>%
+  summarise(female_students = sum(gender == "Female"),total_students = n(), .groups = "drop") %>%
+  arrange(desc(female_students)) %>%
+  slice_head(n = 10) %>%
+  select(reported_institute, female_students, total_students, typeof_institute, institute_district)
 
 # Polytechnics
 poly_level_fem_student_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,type_of_institute,reported_institute) %>%
+  group_by(institute_district,typeof_institute,reported_institute) %>%
   summarise(female_students = sum(gender=="Female"), .groups = "drop") %>%
-  select(reported_institute, female_students, type_of_institute, institute_district) %>%
+  select(reported_institute, female_students, typeof_institute, institute_district) %>%
   arrange(desc(female_students)) %>%
   slice_head(n = 10)
 
@@ -659,19 +737,19 @@ total_gov_poly_itis = student_dip_admis %>%
 # count of available trades in ITIs 2023
 iti_trade_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district, reported_institute, type_of_institute) %>%
+  group_by(institute_district, reported_institute, typeof_institute) %>%
   summarise(trade_count = n_distinct(reported_branch_or_trade), .groups = "drop") %>%
   arrange(desc(trade_count)) %>% 
-  select(reported_institute, trade_count, type_of_institute,institute_district) %>%
+  select(reported_institute, trade_count, typeof_institute,institute_district) %>%
   slice_head(n = 10)
 
 # count of available trades in ITIs 2023
 poly_trade_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district, reported_institute, type_of_institute) %>%
+  group_by(institute_district, reported_institute, typeof_institute) %>%
   summarise(branch_count = n_distinct(reported_branch_or_trade), .groups = "drop") %>%
   arrange(desc(branch_count)) %>% 
-  select(reported_institute, branch_count, type_of_institute,institute_district) %>%
+  select(reported_institute, branch_count, typeof_institute,institute_district) %>%
   slice_head(n = 10)
 
 
@@ -725,9 +803,6 @@ poly_level_fem_student_count  %>%
   knitr::kable(caption = "Table _: Top 10 Polytechnics with Highest Female Student Enrollment", digits = 1) %>%
   kableExtra::kable_styling(bootstrap_options = "striped",full_width = FALSE)
 
-selected_institute_trade_matrix %>%
-  knitr::kable(caption = "Table _: Trade Composition Selected Gov. ITIs with High Female Student Enrollment", digits = 1) %>%
-  kableExtra::kable_styling(bootstrap_options = "striped",full_width = FALSE)
 
 reactable_selected_institute_trade_matrix <- reactable(
   selected_institute_trade_matrix, 
@@ -866,7 +941,7 @@ top_trades_within_gender <- top_trades_within_gender %>%
 ```
 
 
-```{r tables_trade, echo=FALSE,include=FALSE, results='asis'}
+```{r echo=FALSE, results='asis'}
 ## Top Trades in 2023 In Govt. & Pvt. Institutes 
 # Create an interactive table with sorting
 reactable_table_trade_insti <- reactable(
@@ -906,6 +981,10 @@ htmlwidgets::prependContent(
   )
 )
 
+
+```
+
+```{r echo=FALSE}
 # Create the line chart
 ggplot(top_trades_within_social_categories, aes(x = year, y = trade_count, color = reported_branch_or_trade, group = reported_branch_or_trade)) +
   geom_line(size = 1) + # Draw lines for each trade
